fix(docs): ensure page does not overflow horizontally

--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -11,7 +11,7 @@
   word-break: normal
   word-wrap: normal
   line-height: 1.5
-  tab-size: 4
+  tab-size: 2
   hyphens: none
 
 .doc-code
@@ -116,7 +116,6 @@ body.body--dark
   .doc-code,
   .doc-code__inner
     color: #f8f8f2
-    background-color: none
 
   .doc-code__inner
     background-color: $dark-pill
